--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,8 +1,9 @@
 // Home Content
 
 .home {
-
+  padding-top: 105px;
   .intro {
+    
     img{
       width: 100%;
       border-radius: 0.5rem;
